syntax = "proto3";
package dataocean.dataocean;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "dataocean/x/dataocean/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateVideo(MsgCreateVideo) returns (MsgCreateVideoResponse);
  rpc PlayVideo(MsgPlayVideo) returns (MsgPlayVideoResponse);
  rpc PaySign(MsgPaySign) returns (MsgPaySignResponse);
  rpc SubmitPaySign(MsgSubmitPaySign) returns (MsgSubmitPaySignResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateVideo {
  string creator = 1;
  string title = 2;
  string description = 3;
  string coverLink = 4;
  string videoLink = 5;
  uint64 priceMB = 6;
}

message MsgCreateVideoResponse {
  uint64 id = 1;
}

message MsgPlayVideo {
  string creator = 1;
  uint64 videoId = 2;
}

message MsgPlayVideoResponse {
  string url = 1;
  string exp = 2;
}

message MsgPaySign {
  string creator = 1;
  uint64 videoId = 2;
  uint64 receivedSizeMB = 3;
  uint64 timestamp = 4;
}

message MsgPaySignResponse {
}

message MsgSubmitPaySign {
  string creator = 1;
  string paySign = 2;
}

message MsgSubmitPaySignResponse {
}

// this line is used by starport scaffolding # proto/tx/message
